# monitoring-check_routeros

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  check_routeros.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  icinga.yml  pages.yml  pypi.yml
config/: check_routeros.icinga2.conf
docs/: cli.md  requirements.txt
routeros_check/: cli.py  context.py  helper.py  resource.py
routeros_check/check/: interface.py  interface_gre.py  interface_vrrp.py  routing_bgp_peer.py  routing_ospf_neighbor.py  system_clock.py  system_cpu.py  system_disk.py  system_fan.py  system_license.py  system_memory.py  system_ntp_client.py  system_power.py  system_psu.py  system_temperature.py  system_update.py  system_uptime.py  tool_ping.py
tests/: base_test.py  helpers_test.py
