# SPDX-FileCopyrightText: none
# SPDX-License-Identifier: CC0-1.0

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "routeros-check"
version = "0.7.2"
description = "Monitoring plugin for MikroTik devices for Icinga-Nagios-... "
readme = "README.md"
authors = [{ name = "DinoTools"}]
license = { file = "LICENSE.md" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["RouterOS", "MikroTik", "Icinga", "Nagios", "Monitoring"]
dependencies = [
    "Click",
    "librouteros",
    "nagiosplugin",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/DinoTools/monitoring-check_routeros"

[project.scripts]
check_routeros = "routeros_check.__main__:cli"

[tool.setuptools.packages.find]
include = ["routeros_check*"]
